# aplicacion-biblia

./: .env.example  .gitignore  NETLIFY_DEPLOY.md  PLAY_STORE_CHECKLIST.md  POLITICA_PRIVACIDAD.md  README.md  build-lite-apk.ps1  firmar_apk_release.bat  generar_apk_debug.bat  generar_apk_flet_oficial.bat  generar_apk_ligera.bat  main.py  netlify.toml  personajes masculinos.txt  pyproject.toml  validar_openrouter.py
.github/workflows/: github-pages.yml
assets/: manifest.json
netlify/functions/: health.js  openrouter-proxy.js
src/biblia_app/: __main__.py  bienvenida.py  contenido.py  http_client.py  idiomas.py  main.py  versiculos.py
src/biblia_app.dist-info/: METADATA  top_level.txt
